added reports endpoints schemas
