# generated/Endpoint/ProjectBudgetReport.php
@@ -43,12 +43,12 @@ class ProjectBudgetReport extends \Jane\OpenApiRuntime\Client\BaseEndpoint imple
      * {@inheritdoc}
      *
      *
-     * @return null|\JoliCode\Harvest\Api\Model\Error
+     * @return null|\JoliCode\Harvest\Api\Model\ProjectBudgetReportResult|\JoliCode\Harvest\Api\Model\Error
      */
     protected function transformResponseBody(string $body, int $status, \Symfony\Component\Serializer\SerializerInterface $serializer, ?string $contentType)
     {
         if (200 === $status) {
-            return null;
+            return $serializer->deserialize($body, 'JoliCode\\Harvest\\Api\\Model\\ProjectBudgetReportResult', 'json');
         }
         return $serializer->deserialize($body, 'JoliCode\\Harvest\\Api\\Model\\Error', 'json');
     }
